# feeder

./: .env-example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
backend/: manage.py  mypy.ini  requirements.txt  setup.cfg
backend/feeder/: __init__.py  asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
backend/notification/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/spotify/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/subscription/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/user/: admin.py  generators.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/utils/: apps.py  generators.py  tasks.py  tests.py
backend/youtube/: admin.py  tasks.py  (+5 more)
docker/: Dockerfile  docker-compose.yml  feeder.env
feeder/: api_urls.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: .env  .gitignore  README.md  nuxt.config.js  package-lock.json  package.json
spotify/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
subscription/: admin.py  models.py  serializers.py  urls.py  views.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
utils/: apps.py  decorators.py  generators.py  tasks.py  tests.py
youtube/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
(+185 files in other folders)
