[tool.poetry]
name = "feeder"
version = "0.1.0"
description = "Feeder is a tool that helps you track the latest releases from different resources by aggregating such contents as albums from Spotify and videos from Youtube into one single feed."
authors = ["TywinEvergreen"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
django-redis = "^5.2.0"
celery = "^5.2.3"
google-api-python-client = "^2.39.0"
spotipy = "^2.19.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
djoser = "^2.1.0"
django-unused-media = "^0.2.2"
psycopg2-binary = "^2.9.3"
djangorestframework-jsonapi = "^5.0.0"
Pillow = "^9.0.1"
factory-boy = "^3.2.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
